--- a/style.css
+++ b/style.css
@@ -114,18 +114,20 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.8); /* Увеличено затемнение */
     justify-content: center;
     align-items: center;
+    z-index: 1000;
 }
 .modal-content {
     background: white;
     padding: 20px;
     border-radius: 10px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
     text-align: center;
-    width: 90%;
-    max-width: 400px;
+    max-width: 80%;
 }
+
 .answers button {
     width: 100%;
     padding: 10px;
